<resources>
    <string name="app_name">CriminalIntent</string>

    <string name="button">Confirm</string>
    <string name="title">Pick Date</string>
    <string name="textview_title">Title</string>
    <string name="textview_title_hint">Enter your title here</string>
    <string name="textview_details">Details</string>
    <string name="checkbox_solved">Solved</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="first">First</string>
    <string name="previous">Previous</string>
    <string name="next">Next</string>
    <string name="last">Last</string>
</resources>
