<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".controller.CrimeDetailFragment">

    <TextView
        android:id="@+id/textview_title_label"
        style="?android:listSeparatorTextViewStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/textview_title" />

    <EditText
        android:id="@+id/edittext_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/textview_title_hint"
        android:inputType="textPersonName" />

    <TextView
        android:id="@+id/textview_detail"
        style="?android:listSeparatorTextViewStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/textview_details" />

    <TextView
        android:id="@+id/textView_date_time"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="18sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button_date"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="Set Date" />

        <Button
            android:id="@+id/button_time"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="Set Time" />
    </LinearLayout>

    <CheckBox
        android:id="@+id/checkbox_solved"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/checkbox_solved" />

</LinearLayout>